# ami-ml

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
active_learning/: README.md  track_localize_classify_annotation-2022_09_05.csv
active_learning/code/: acquisition_functions.py  localization_classification.py  resnet50.py  test.py
active_learning/src/: classification.py  end_to_end.py  job_end_to_end.sh  job_gbif.sh  localization_classification.py  score_gbif_images.py  tracks_w_classification_multiple.py
active_learning/trap_data_prediction/: end_to_end.py  job_end_to_end.sh  localization_classification.py  video.py
archive/: README.md
archive/classification_moths/: eval_alone.py  eval_jobscript.sh  jobscript_train.sh  train_QcVt.ipynb  train_QcVt.py  train_uk.ipynb  train_uk.py
archive/classification_nonmoths/: random_testing.ipynb  train.ipynb
archive/gbif_data/: 01-iNaturalist_Data.ipynb  02-GBIF_Taxa_Backbone.ipynb  03-GBIF_Data.ipynb  04-GBIF_NonMothTaxa_Backbone.ipynb  05-MacroMoth_Data.ipynb  06-GBIF_Taxa_Backbone_UK.ipynb  07-create_webdataset.ipynb  08-GBIF_Taxa_Backbone_UK-Denmark.ipynb  create_webdataset.py  fetch_gbif_mothdata.py  fetch_gbif_nonmothdata.py  gbif_taxa_backbone_uk-denmark.py  jobscript_create_webdataset.sh  jobscript_fetch_data.sh  jobscript_gbif_taxa_backbone.sh
archive/gbif_species_trainer/: README.md
archive/localization/: 01-localization_annot.ipynb  02-localization_wo_bg.ipynb  03-train_localize.ipynb  04-inference_localize.ipynb  07-check_inference_time.ipynb  job_train_localization.sh  localizedataset.py  train_localization.py
archive/selfsupervision/: find_hard_examples.py  selfsupervise_findhardex_jobscript.sh  selfsupervise_trainhardex_jobscript.sh  train_hardex.ipynb  train_hardex.py
archive/species_lists/: Denmark_Moth-List_25Apr2023.csv  Denmark_Original_Dec22.xlsx  NonMothList_30June2021.csv  Quebec-Vermont-UK-Denmark_Moth-List_17Oct2023.csv  Quebec-Vermont_Moth-List_17Oct2023.csv  UK-Denmark_Moth-List_14Sep2023.csv  (+2 more)
assets/: example_taxon_key_to_id_map.json  example_taxon_key_to_name_map.json
research/: .env.example  .gitignore  README.md  environment.yml
scripts/: job_copy_data_to_object_storage.sh  job_fetch_images.sh  job_train_classifier.sh
species_lists/: Barro-Colorado-Island_Moth-List_25Apr2023.csv  Pohl2018_Keylist.csv  Quebec-Vermont_Moth-List_22July2022.csv  UK-Denmark_Moth-List_25Apr2023.csv  UK_Moth-List_25Apr2023.csv
tracking/: resnet50.py  slurm-1963434.out  tracks_w_classification-cnnfeatures.py  tracks_w_classification-multiple.py
(+372 files in other folders)
